package part5.core;

public class File {
    private String name;

    public File(String name) {
        this.name = name;
    }

    public void set_name(String name) {this.name = name;}
    public String get_name() {return this.name;}

    @Override
    public String toString() {return name;}
}
