@startuml
top to bottom direction

class Folder {
  - String name
  - ArrayList<Folder> subfolders
  - ArrayList<File> files
  --
  + Folder()
  + getName(): String
  + setName(name: String): void
  + addSubfolder(subFolderName: String): void
  + removeSubfolder(subFolderName: String): void
  + getSubfolder(subFolderName: String): Folder
  + addFile(fileName: String): void
  + removeFile(file: File): boolean
  + toString(): String
  + printFolderContents(): void
}

class File {
  - String name
  --
  + File(name: String)
  + getName(): String
  + setName(name: String): void
  + toString(): String
}

Folder *-- "0..*" Folder : subfolders
Folder *-- "0..*" File   : files
@enduml
